Fixed row equipped, rarity, unidentified styles. Fixed bug with attunement checkbox labeling and formatting. Fixed item sheet backgrounds in dark mode.

--- a/src/scss/quadrone/components/buttons.scss
+++ b/src/scss/quadrone/components/buttons.scss
@@ -105,7 +105,7 @@
 
   &.disabled {
     cursor: default;
-    pointer-events: none;
+    // pointer-events: none;
     background: transparent;
     border: 1px solid var(--t5e-component-field-border);
 
